--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,22 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    testOptions {
+        unitTests {
+            returnDefaultValues = true
+        }
+    }
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:22.1.0'
     }
 }
 
@@ -26,9 +36,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.google.android.gms:play-services-vision:9.2.0'
-    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support:support-annotations:25.0.0'
+    androidTestCompile 'com.android.support.test:rules:0.5'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'com.android.support.test:runner:0.5'
-    testCompile 'com.android.support.test:rules:0.5'
 
 }
